ymls/webservices/traindatavol-server-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traindatavol-server-dep
  labels:
    run: traindatavolserver
spec:
  replicas: 1
  selector:
    matchLabels:
      run: traindatavolserver
  template:
    metadata:
      labels:
        run: traindatavolserver
    spec:
      containers:
      - name: traindatavol-server
        image: nginx
        resources:
          requests:
            memory: 50Mi
            cpu: 50m
          limits:
            memory: 60Mi
            cpu: 60m
        workingDir: /traindatavol
        volumeMounts:
        - mountPath: /traindatavol
          name: traindatavol
        - name: traindatavol-nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: traindatavol
        persistentVolumeClaim:
          claimName: traindatavol
      - name: traindatavol-nginx-conf
        configMap:
          name: traindatavol-nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
