ymls/webservices/traindatavol-expose.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: traindatavolserver
  name: traindatavolexpose
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: traindatavolserver
  type: ClusterIP
