ymls/webservices/traindatavol-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traindatavolingress
spec:
  ingressClassName: haproxy
  rules:
  - host: traindatavol.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traindatavolexpose
            port:
              number: 80
  tls:
  - hosts:
    - traindatavol.nrp-nautilus.io
